--- a/data/model_script.ipynb
+++ b/data/model_script.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -272,71 +272,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipe = Pipeline([('encoder', OneHotEncoder()), ('KNN', KNeighborsClassifier())])\n",
+    "#pipe = Pipeline([('encoder', OneHotEncoder()), ('NN', NearestNeighbors())])\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 625, 4643]]\n"
+     ]
+    }
+   ],
+   "source": [
     "feature_cols = ['car_year', 'car_used','car_mm','car_color']\n",
-    "X = df[feature_cols]\n",
-    "y = df.order_completed\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.15)"
+    "X = dfcars[feature_cols]\n",
+    "enc = OneHotEncoder(handle_unknown=\"ignore\")\n",
+    "enc.fit(X)\n",
+    "d2 = enc.transform(X)\n",
+    "nn = NearestNeighbors()\n",
+    "nn.fit(d2)\n",
+    "nnresults = nn.kneighbors(d2[0,], n_neighbors = 3)[1]\n",
+    "print((nnresults.tolist()))\n",
+    "# for item in nnresults[1]:\n",
+    "#     print(dfcars.iloc[item,])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4693333333333333"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pipe.fit(X_train, y_train).score(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.43661972, 0.46478873, 0.50704225, 0.53051643, 0.5258216 ,\n",
-       "       0.43867925, 0.48584906, 0.55660377, 0.49528302, 0.46698113])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cross_val_score(pipe, X_train, y_train, cv=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify the file path to save the pipeline\n",
     "file_path = 'trained_model.pkl'\n",
+    "file_path2 = 'encoder.pkl'\n",
     "\n",
     "# Save the pipeline to disk\n",
     "with open(file_path, 'wb') as file:\n",
-    "    pickle.dump(pipe, file)"
+    "    pickle.dump(nn, file)\n",
+    "\n",
+    "with open(file_path2, 'wb') as file:\n",
+    "    pickle.dump(enc, file)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
